--- a/posts/templates/post_create.html
+++ b/posts/templates/post_create.html
@@ -4,6 +4,14 @@
 	<title>Post {{title}}</title>
 </head>
 <body>
+		{% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+    {% endfor %}
+</ul>
+{% endif %}
+
 		<h1>The Post {{title}} Page</h1>
 		<form action="{% url 'posts:create' %}" method="POST">
 		{% csrf_token %}
