--- a/posts/templates/post_create.html
+++ b/posts/templates/post_create.html
@@ -1,22 +1,15 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Post {{title}}</title>
-</head>
-<body>
-		{% if messages %}
-<ul class="messages">
-    {% for message in messages %}
-    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-    {% endfor %}
-</ul>
-{% endif %}
+{% extends "base.html" %}
 
+{% block title %}
+	Create
+{% endblock title %}
+
+{% block mainBody %}
 		<h1>The Post {{title}} Page</h1>
 		<form action="{% url 'posts:create' %}" method="POST">
 		{% csrf_token %}
 		{{form.as_p}}
 		<input type="submit" name="Create Post">
 		</form>
-</body>
-</html>
+
+{% endblock mainBody %}
