--- a/posts/templates/post_update.html
+++ b/posts/templates/post_update.html
@@ -1,22 +1,14 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>{{title}}</title>
-</head>
-<body>
-	{% if messages %}
-	<ul class="messages">
-	    {% for message in messages %}
-	    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-	    {% endfor %}
-	</ul>
-	{% endif %}
+{% extends "base.html" %}
 
+{% block title %}
+	Update
+{% endblock title %}
+
+{% block mainBody %}
 	<h1>The Post {{title}} Page</h1>
 	<form action="{% url 'posts:update' post_id=update_object.id %}" method="POST">
 	{% csrf_token %}
 	{{form.as_p}}
 	<input type="submit" name="Update Post">
 	</form>
-</body>
-</html>
+{% endblock mainBody %}
