--- a/posts/templates/base.html
+++ b/posts/templates/base.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html>
 <head>
 	<title>
@@ -6,6 +7,7 @@
 
 		{% endblock title %}
 	</title>
+	<link rel="stylesheet" href="{% static 'css/base.css' %}">
 </head>
 <body>
 
