--- a/posts/templates/base.html
+++ b/posts/templates/base.html
@@ -8,13 +8,16 @@
 		{% endblock title %}
 	</title>
 	<link rel="stylesheet" href="{% static 'css/base.css' %}">
+	<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 </head>
 <body>
 
-{% include "messages.html" %}
+	{% include "messages.html" %}
 
-{% block mainBody %}
+	{% block mainBody %}
 
-{% endblock mainBody %}
+	{% endblock mainBody %}
+
+	<script src="{% static 'js/bootstrap.min.js' %}"></script>
 </body>
 </html>
