--- a/posts/templates/post_list.html
+++ b/posts/templates/post_list.html
@@ -1,19 +1,22 @@
 {% extends "base.html" %}
 
 {% block title %}
-	List
+	{{title}}
 {% endblock title %}
 
 {% block mainBody %}
-<h1>The Post {{title}} Page</h1>
-		<ol>
+<h1>{{title}}</h1>
+		<div class="row">
 		{% for x in the_object_list %}
-			<li><a href="{{x.get_absolute_url}}">{{x.title}}</a></li>
-			{{x.content}} <br>
-			{{x.timestamp}} <br>
-			{{x.updated}} <br>
-			{{x.id}} <br>
-			{{x.pk}} <br>
+			<div class="col-sm-6 col-sm-offset-3">
+				<div class="thumbnail">
+					<div class="caption">
+						<h3><a href="{{x.get_absolute_url}}">{{x.title}}</a><small> {{x.timestamp| timesince }} ago</small></h3>
+						<p>{{x.content| linebreaks|truncatechars:100}}</p>
+						<p><a href="{{x.get_absolute_url}}" class="btn btn-primary" role="button">View</a></p>
+					</div>
+				</div>
+			</div>
 		{%endfor%}
-		</ol>
+		</div>
 {% endblock mainBody %}
