--- a/posts/templates/post_create.html
+++ b/posts/templates/post_create.html
@@ -6,7 +6,7 @@
 
 {% block mainBody %}
 		<h1>The Post {{title}} Page</h1>
-		<form action="{% url 'posts:create' %}" method="POST">
+		<form action="{% url 'posts:create' %}" method="POST" enctype="multipart/form-data">
 		{% csrf_token %}
 		{{form.as_p}}
 		<input type="submit" name="Create Post">
